tests/errors/surf_type_07.experr
type 'List' is not callable
